[package]
name = "dnp3-app"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
description = "DNP3 application-layer functions, objects, and variation encoding"

[dependencies]
dnp3-core = { path = "../dnp3-core" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
