[package]
name = "dnp3-link"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
description = "DNP3 link-layer frame encoding and decoding"

[dependencies]
dnp3-core = { path = "../dnp3-core" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
